bindings/c/patina_c.h


typedef struct {
    double sample_rate;       
    int    max_block_size;    
    int    num_channels;      
} PatinaProcessSpec;
typedef struct PatinaDelayEngine_t*       PatinaDelayEngine;
typedef struct PatinaDriveEngine_t*       PatinaDriveEngine;
typedef struct PatinaReverbEngine_t*      PatinaReverbEngine;
typedef struct PatinaCompressorEngine_t*  PatinaCompressorEngine;
typedef struct PatinaModulationEngine_t*  PatinaModulationEngine;
typedef struct PatinaTapeEngine_t*        PatinaTapeEngine;
typedef struct PatinaChannelStrip_t*      PatinaChannelStrip;
typedef struct PatinaEqEngine_t*              PatinaEqEngine;
typedef struct PatinaLimiterEngine_t*         PatinaLimiterEngine;
typedef struct PatinaFilterEngine_t*          PatinaFilterEngine;
typedef struct PatinaEnvelopeGeneratorEngine_t* PatinaEnvelopeGeneratorEngine;
typedef struct {
    float  delay_ms;            
    float  feedback;            
    float  tone;                
    float  mix;                 
    float  comp_amount;         
    float  chorus_depth;        
    float  lfo_rate_hz;         
    double supply_voltage;      
    int    bbd_stages;          
    int    emulate_bbd;         
    int    emulate_opamp_sat;   
    int    emulate_tone_rc;     
    int    enable_aging;        
    double age_years;
    double capacitance_scale;
    int    pedal_mode;          
} PatinaDelayParams;
PATINA_API PatinaDelayParams patina_delay_default_params(void);
PATINA_API PatinaDelayEngine patina_delay_create(void);
PATINA_API void patina_delay_destroy(PatinaDelayEngine h);
PATINA_API void patina_delay_prepare(PatinaDelayEngine h, const PatinaProcessSpec* spec);
PATINA_API void patina_delay_reset(PatinaDelayEngine h);
PATINA_API void patina_delay_process(PatinaDelayEngine h,
                                     const float* const* input,
                                     float* const* output,
                                     int num_channels, int num_samples,
                                     const PatinaDelayParams* params);
typedef struct {
    float  drive;              
    int    clipping_mode;      
    int    diode_type;         
    float  tone;               
    float  output_level;       
    float  mix;                
    double supply_voltage;     
    float  temperature;        
    int    enable_power_sag;   
    float  sag_amount;         
    int    pedal_mode;          
} PatinaDriveParams;
PATINA_API PatinaDriveParams patina_drive_default_params(void);
PATINA_API PatinaDriveEngine patina_drive_create(void);
PATINA_API void patina_drive_destroy(PatinaDriveEngine h);
PATINA_API void patina_drive_prepare(PatinaDriveEngine h, const PatinaProcessSpec* spec);
PATINA_API void patina_drive_reset(PatinaDriveEngine h);
PATINA_API void patina_drive_process(PatinaDriveEngine h,
                                     const float* const* input,
                                     float* const* output,
                                     int num_channels, int num_samples,
                                     const PatinaDriveParams* params);
enum {
    PATINA_REVERB_SPRING = 0,
    PATINA_REVERB_PLATE  = 1
};
typedef struct {
    int    type;               
    float  decay;              
    float  tone;               
    float  mix;                
    double supply_voltage;     
    float  tension;            
    float  drip_amount;        
    int    num_springs;        
    float  predelay_ms;        
    float  damping;            
    float  diffusion;          
    float  mod_depth;          
    int    pedal_mode;          
} PatinaReverbParams;
PATINA_API PatinaReverbParams patina_reverb_default_params(void);
PATINA_API PatinaReverbEngine patina_reverb_create(void);
PATINA_API void patina_reverb_destroy(PatinaReverbEngine h);
PATINA_API void patina_reverb_prepare(PatinaReverbEngine h, const PatinaProcessSpec* spec);
PATINA_API void patina_reverb_reset(PatinaReverbEngine h);
PATINA_API void patina_reverb_process(PatinaReverbEngine h,
                                      const float* const* input,
                                      float* const* output,
                                      int num_channels, int num_samples,
                                      const PatinaReverbParams* params);
enum {
    PATINA_COMP_PHOTO       = 0,
    PATINA_COMP_FET         = 1,
    PATINA_COMP_VARIABLE_MU = 2
};
typedef struct {
    int    type;               
    float  input_gain;         
    float  threshold;          
    float  output_gain;        
    float  attack;             
    float  release;            
    int    ratio;              
    float  mix;                
    double supply_voltage;     
    int    enable_gate;        
    float  gate_threshold_db;  
    int    photo_mode;         
    int    pedal_mode;          
} PatinaCompressorParams;
PATINA_API PatinaCompressorParams patina_compressor_default_params(void);
PATINA_API PatinaCompressorEngine patina_compressor_create(void);
PATINA_API void patina_compressor_destroy(PatinaCompressorEngine h);
PATINA_API void patina_compressor_prepare(PatinaCompressorEngine h, const PatinaProcessSpec* spec);
PATINA_API void patina_compressor_reset(PatinaCompressorEngine h);
PATINA_API void patina_compressor_process(PatinaCompressorEngine h,
                                          const float* const* input,
                                          float* const* output,
                                          int num_channels, int num_samples,
                                          const PatinaCompressorParams* params);
PATINA_API float patina_compressor_get_gain_reduction_db(PatinaCompressorEngine h, int channel);
PATINA_API int   patina_compressor_is_gate_open(PatinaCompressorEngine h, int channel);
enum {
    PATINA_MOD_PHASER  = 0,
    PATINA_MOD_TREMOLO = 1,
    PATINA_MOD_CHORUS  = 2
};
typedef struct {
    int    type;               
    float  rate;               
    float  depth;              
    float  feedback;           
    float  mix;                
    double supply_voltage;     
    float  center_freq_hz;     
    float  freq_spread_hz;     
    int    num_stages;         
    float  temperature;        
    int    tremolo_mode;       
    int    stereo_phase_invert; 
    float  chorus_delay_ms;    
    float  stereo_width;       
    int    pedal_mode;          
} PatinaModulationParams;
typedef struct {
    float  input_gain;         
    float  saturation;         
    float  bias_amount;        
    float  tape_speed;         
    float  wow_flutter;        
    int    enable_head_bump;   
    int    enable_hf_rolloff;  
    float  head_wear;          
    float  tape_age;           
    int    enable_transformer; 
    float  transformer_drive;  
    float  transformer_sat;    
    float  tone;               
    float  mix;                
    double supply_voltage;     
    int    pedal_mode;          
} PatinaTapeParams;
typedef struct {
    float  preamp_drive;       
    float  preamp_bias;        
    float  preamp_output;      
    float  tube_age;           
    int    enable_eq;          
    float  eq_cutoff_hz;       
    float  eq_resonance;       
    int    eq_type;            
    float  eq_temperature;     
    int    enable_gate;        
    float  gate_threshold_db;  
    float  gate_hysteresis_db;
    float  input_trim_db;      
    float  output_trim_db;     
    double supply_voltage;     
    int    pedal_mode;          
} PatinaChannelStripParams;
typedef struct {
    int    enable_low;         
    float  low_freq_hz;        
    float  low_gain_db;        
    float  low_resonance;      
    int    enable_mid;         
    float  mid_freq_hz;        
    float  mid_gain_db;        
    float  mid_q;              
    int    enable_high;        
    float  high_freq_hz;       
    float  high_gain_db;       
    float  high_resonance;     
    float  temperature;        
    float  output_gain_db;     
    double supply_voltage;     
    int    pedal_mode;         
} PatinaEqParams;
typedef struct {
    int    type;               
    float  ceiling;            
    float  attack;             
    float  release;            
    float  output_gain;        
    float  mix;                
    int    pedal_mode;         
    double supply_voltage;     
} PatinaLimiterParams;
typedef struct {
    int    routing;               
    float  filter1_cutoff_hz;     
    float  filter1_resonance;     
    int    filter1_type;          
    int    filter1_slope;         
    float  filter2_cutoff_hz;     
    float  filter2_resonance;     
    int    filter2_type;
    int    filter2_slope;
    float  drive1_amount;         
    int    drive1_type;           
    float  drive2_amount;         
    int    drive2_type;
    float  drive3_amount;         
    int    drive3_type;
    float  output_level;          
    float  mix;                   
    float  temperature;           
    double supply_voltage;        
    int    pedal_mode;            
    int    normalize;             
} PatinaFilterParams;
typedef struct {
    float  attack;              
    float  decay;               
    float  sustain;             
    float  release;             
    int    env_mode;            
    int    curve;               
    int    trigger_mode;        
    float  auto_threshold_db;   
    float  velocity;            
    float  vca_depth;           
    float  output_gain;         
    float  mix;                 
    float  temperature;         
    int    pedal_mode;          
    double supply_voltage;      
} PatinaEnvelopeGeneratorParams;
PATINA_API const char* patina_version(void);